# rs-image-templating

./: .gitignore  Cargo.toml  example_layers_config.toml
.github/workflows/: rust.yml
src/: canvas.rs  colors.rs  lib.rs  main.rs  rect.rs
src/bitmap/: blending.rs  image.rs  pixel.rs
src/filters/: base.rs  brightness.rs  channel_filter.rs  flip.rs  mod.rs  rotation.rs  transform.rs
src/layer/: base.rs  images.rs  mod.rs  shapes.rs  text.rs
src/layers/: image.rs  mod.rs  shapes.rs
src/layers/text/: layout.rs  mod.rs
src/parser/: base.rs  mod.rs  toml.rs
src/pixel/: base.rs
src/pixels/: blending.rs  image.rs  mod.rs  pixel.rs
tests/: common.rs
tests/filters/: mod.rs  transform.rs
tests/text/: glyph_layout.rs  mod.rs  raster_text.rs
