[package]
name = "rs-image-templating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_template"

[dependencies]
toml = { version = "0.7.2", optional = true }
fontdue = { version = "0.7.3", optional = true }
font-loader = { version = "0.11.0", optional = true }
image = "0.24.6"

[features]
default = ["toml-parser"]
toml-parser = ["dep:toml"]
text = ["dep:fontdue", "dep:font-loader"]
