[package]
name = "rs-image-templating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_template"

[dependencies]
num = "0.4.3"
image = "0.25.2"
bytemuck = {version = "1.16.1", features = ["must_cast", "derive"]}
thiserror = "1.0.63"
fontdue = "0.9.2"
either = "1.13.0"

chrono = "0.4.38"

[features]

